--- a/exercicios/ex022-imagem de fundo/fundo006.html
+++ b/exercicios/ex022-imagem de fundo/fundo006.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color:  black;
+           /* background-color:  black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
+        
 
         main {
             background-color: white;
-            width: 400px;
+            width: 300px;
             padding: 10px;
             margin: auto;
             border: 1px solid rgb(35, 61, 204);
@@ -28,7 +33,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, accusamus consectetur, praesentium alias vitae natus veniam possimus ratione iusto quo aperiam voluptates exercitationem a deleniti delectus quisquam harum unde error Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sed reprehenderit dicta perferendis tenetur, voluptatibus doloribus minus perspiciatis aliquam eius asperiores natus. Laboriosam nulla eum dolore commodi optio, ullam quaerat.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, accusamus consectetur, praesentium alias vitae natus veniam possimus ratione iusto quo aperiam voluptates exercitationem a deleniti delectus quisquam harum unde error Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sed reprehenderit dicta perferendis tenetur, voluptatibus doloribus minus perspiciatis aliquam eius asperiores natus. Laboriosam nulla eum dolore commodi optio, ullam quaerat Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas neque inventore maiores commodi adipisci suscipit autem accusantium sapiente reprehenderit facilis maxime quo aliquam quos minus, incidunt labore quisquam dolorem delectus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat nemo dolorem quibusdam voluptatibus minus ab, porro, obcaecati laborum dolor ipsam alias odio modi aliquid aperiam, qui exercitationem unde. Mollitia, eum Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem laboriosam reprehenderit, corporis voluptate enim dolores facilis quod vitae expedita, dolorem aperiam, iusto sed praesentium voluptatem maiores? Nobis dolore itaque praesentium Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam eius ratione adipisci eum sint libero provident accusantium quod illo quidem dolores tempora, quae perspiciatis aliquid rem! Magni quaerat atque adipisci?</p>
     </main>
 </body>
 </html>
