--- a/desafios/desafiocordel/cordel.html
+++ b/desafios/desafiocordel/cordel.html
@@ -99,7 +99,9 @@
     </section>
 
     <footer> 
-        <p>Site criado por <a href="https://www.instagram.com/andieferson/">Andieferson Machado</a> através do <a href="https://www.cursoemvideo.com/">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://www.instagram.com/andieferson/" target="_blank">Andieferson Machado</a>
+           através do <a href="https://www.cursoemvideo.com/" target="_blank">
+           CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
