--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti molestiae possimus quibusdam, cupiditate quae id nisi esse, explicabo omnis maxime, doloremque voluptas. Voluptatibus atque asperiores mollitia deleniti recusandae. Consequatur, dolor! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis aut doloremque quam porro aliquid in cumque ab voluptatibus veniam, fugit at, deleniti rem ipsum repellat nemo odio, adipisci facilis laboriosam.</p>
 
-    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1>">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, nam? Ea aut labore suscipit provident quod aperiam cum natus repellendus, voluptas facilis ipsa commodi inventore rerum dicta architecto quam non. Lorem ipsum </p><img src='imagens/astronauta.png'>">
         <p>Infelizmente seu navegadopr não é compatível com isso</p>
     </iframe>
 
